crates/swc_css_parser/tests/errors/selector/pseudo-class/function/output.stderr
error: Expected function or ident tokens
 --> $DIR/tests/errors/selector/pseudo-class/function/input.css:1:2
  |
1 | : nth-child(2) {
  |  ^

